--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "md5": "^2.3.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
